# Instrument

./: .gitignore  CMakeLists.txt  README.md
include/: instrument.h  instrumentation.h
src/: instrument.c  instrumentation.c
test/: CMakeLists.txt  test_1.c  test_2.c  test_3.c  test_4.c  test_clock_vs_clock_gettime.c
